[package]
authors = ["u007d <b2b@humanenginuity.com>"]
categories = []
description = "An crate providing ranged numeric types."
edition = "2018"
keywords = []
license = "MIT OR Apache-2.0"
name = "ranged_type"
readme = "README.md"
repository = "https://github.com/u007d/ranged_type"
version = "0.1.0"

[dependencies]
arith_traits = "0.1"
arith_wrappers = "0.1"
num-traits = "0.2"
thiserror = "1"

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
rpath = false

[dev-dependencies]
assert2 = "0.3"
